tests/baselines/reference/nestedTypeVariableInfersLiteral.errors.txt
tests/cases/compiler/nestedTypeVariableInfersLiteral.ts(7,33): error TS2345: Argument of type 'string[]' is not assignable to parameter of type '"z" | "y" | ("z" | "y")[]'.
  Type 'string[]' is not assignable to type '("z" | "y")[]'.
    Type 'string' is not assignable to type '"z" | "y"'.
tests/cases/compiler/nestedTypeVariableInfersLiteral.ts(10,38): error TS2345: Argument of type '{ fields: string[]; }' is not assignable to parameter of type '{ fields: "z" | "y" | ("z" | "y")[]; }'.
  Types of property 'fields' are incompatible.
    Type 'string[]' is not assignable to type '"z" | "y" | ("z" | "y")[]'.
      Type 'string[]' is not assignable to type '("z" | "y")[]'.


==== tests/cases/compiler/nestedTypeVariableInfersLiteral.ts (2 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/19632
    declare function direct<A extends string>(a: A | A[]): Record<A, string>
    declare function nested<A extends string>(a: { fields: A }): Record<A, string>
    declare function nestedUnion<A extends string>(a: { fields: A | A[] }): Record<A, string>
    
    const directUnionSingle = direct("z")
    const directUnionArray = direct(["z", "y"])
                                    ~~~~~~~~~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '"z" | "y" | ("z" | "y")[]'.
!!! error TS2345:   Type 'string[]' is not assignable to type '("z" | "y")[]'.
!!! error TS2345:     Type 'string' is not assignable to type '"z" | "y"'.
    const nestedSingle = nested({fields: "z"})
    const nestedUnionSingle = nestedUnion({fields: "z"})
    const nestedUnionArray = nestedUnion({fields: ["z", "y"]})
                                         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ fields: string[]; }' is not assignable to parameter of type '{ fields: "z" | "y" | ("z" | "y")[]; }'.
!!! error TS2345:   Types of property 'fields' are incompatible.
!!! error TS2345:     Type 'string[]' is not assignable to type '"z" | "y" | ("z" | "y")[]'.
!!! error TS2345:       Type 'string[]' is not assignable to type '("z" | "y")[]'.
    
    declare function hasZField(arg: { z: string }): void
    
    hasZField(directUnionSingle) // ok
    hasZField(directUnionArray) // ok
    hasZField(nestedSingle) // ok
    hasZField(nestedUnionSingle) // ok
    hasZField(nestedUnionArray) // ok